# hydrag

./: .gitignore  CHANGELOG.md  PHASE_A_IMPLEMENTATION_REQUIREMENTS.md  PHASE_A_TESTING_GUIDE.md  PHASE_A_TESTING_SUMMARY.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md
src/hydrag/: __init__.py  config.py  core.py  doc2query.py  enrichment.py  fusion.py  indexer.py  logging.py  protocols.py  sanitize.py  similarity_search.py  sqlite_store.py  surreal_adapter.py  tune.py
src/hydrag/providers/: __init__.py  _retry.py  factory.py  huggingface.py  ollama.py  openai_compat.py
tests/: conftest.py  test_config.py  test_core.py  test_doc2query.py  test_fusion.py  test_phase_a_critical_c2_c3.py  test_phase_a_features_reranking_parent_child.py  test_phase_a_requirements.py  test_providers.py  test_sanitize.py  test_sqlite_store.py  test_surreal_adapter.py  test_tune.py
